# jetbrains-reset-trial-rust

./: .gitignore  COMMANDS.md  Cargo.toml  INSTALL.md  LICENSE  README.md  SECURITY_CHECKLIST.md  USAGE.md
scripts/: build.sh  demo.sh  install.sh  rofi-launcher.sh  setup-deps.sh  setup-rust.sh
src/: main.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: backup.rs  cleaner.rs  mod.rs  product.rs  scanner.rs  xml_parser.rs
src/integrations/: notifications.rs
