[package]
name = "jb-reset"
version = "1.0.0"
edition = "2021"
authors = ["il1v3y"]
license = "MIT"
description = "JetBrains Trial Reset Tool for Linux"

[[bin]]
name = "jb-reset"
path = "src/main.rs"

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.19"
quick-xml = { version = "0.31", features = ["serialize"] }
dirs = "5.0"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# GUI (optional features)
gtk4 = { version = "0.7", optional = true, features = ["v4_10"] }
libadwaita = { version = "0.5", optional = true, features = ["v1_4"] }
relm4 = { version = "0.7", optional = true }

# Notifications
notify-rust = "4.10"

[features]
default = ["cli"]
cli = []
gui = ["gtk4", "libadwaita", "relm4"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
